2008-10-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/CompletionDataList.cs: Add
	AddRange overloads.

2008-10-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs: When the
	list is first shown, don't autoselect the top item unless it matches
	the DefaultCompletionString.

2008-10-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/DeclarationViewWindow.cs: Empty
	the windows when the assigned description is empty as well as when
	it's null. Prevents showing empty tooltip.

	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs: Cleanup.

2008-10-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/CompletionDataList.cs: Add methods
	for removing completion data.

2008-10-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: When the selection
	is disabled, first up/down keystroke enables the selection and does
	not move it. Makes it easier to select current deselected item, and
	mimics VS behaviour.

2008-10-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Disable the
	selection when the completion string is empty.

2008-10-10  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Reset after using
	markup, or the same attributes will be applied to later SetText
	calls.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs: Fix NRE
	on commiting selection. The code was relying on keeping the
	completion list; recent changes disposed it when the window was
	hidden.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/CompletionData.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionDataList.cs: