@@ -1,3 +1,8 @@
+2008-10-16  Full Name  <Email Address>
+
+	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: fixed 'Bug 432435 -
+	Code completion shows 'List', not List<T>'.
+
 2008-10-16  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.Projects.Gui.Completion/CompletionDataList.cs: Add
